<resources>
    <string name="app_name">Bạn Nhà Nông</string>
    <string name="action_settings">Settings</string>

    <!--Network-->
    <string name="open">DailyExcercise</string>
    <string name="close">Bye</string>

    <string name="token_builder">Bearer %s</string>

    <string name="error_network_server_timeout">Request timeout</string>
    <string name="error_network_no_internet">No internet connection</string>
    <string name="error_network_request_fail">Request fail</string>
    <string name="error_network_auth_failure_error">Auth failure error</string>
    <string name="error_network_error">Request error</string>
    <string name="error_parse_json">Can not get data</string>

    <!-- Tabar -->
    <string name="tab_price_name">Price</string>
    <string name="tab_market_name">Market</string>
    <string name="tab_workshop_name">Workshop</string>
    <string name="tab_map_name">Location</string>

    <!-- Tab in Market-->
    <string name="tab_market_domestic_name">Giá trong nước</string>
    <string name="tab_market_international_name">Giá quốc tế</string>

    <!--Tab in workshop-->
    <string name="tab_seminar">Hội thảo</string>
    <string name="tab_engineer">Kĩ sư</string>
    <string name="tab_news">Tin tức</string>
<<<<<<< HEAD
    <string name="title_activity_maps">Map</string>
=======

    <!-- Login -->
    <string name="edtPassword">Password</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="tvSingupHere">Đăng ký tại đây</string>
    <string name="title_activity_message">Message</string>
    <string name="title_activity_bai_tap_giam_can">BaiTapGiamCanActivity</string>
    <string name="title_activity_tao_chuong_trinh_giam_can">TaoChuongTrinhGiamCanActivity</string>
    <string name="title_activity_thong_tin_chuong_trinh_giam_can">ThongTinChuongTrinhGiamCanActivity</string>
    <string name="title_activity_chuong_trinh_tang_suc_ben">ChuongTrinhTangSucBenActivity</string>

    <string name="title_activity_cai_dat">CaiDatActivity</string>
    <string name="title_activity_nhan_tin">NhanTinActivity</string>

    <!-- Signup -->
    <string name="signup_username_empty">Username can not empty</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_detail_news">DetailNewsActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_khau_phan_an">KhauPhanAnActivity</string>
    <string name="title_activity_menu_them_ban">MenuThemBanActivity</string>
    <string name="title_activity_maps1">Map</string>
    <string name="title_activity_maps2">Map</string>

    <!-- Forgot Password -->
    <string name="txtemail">Email</string>
    <string name="tvForgot">Will we send you a reset password link to your inbox</string>
    <string name="btnForgot">Forgot</string>
>>>>>>> fcc12b27449605e6e9e773b2fbd277c1c189b9a3
</resources>
