<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/all_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/main_bottom_tab_container">

        </FrameLayout>


        <LinearLayout
            android:id="@+id/main_bottom_tab_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_height"
            android:layout_alignParentBottom="true"
            android:background="@color/md_white_1000"
            >

            <RelativeLayout
                android:id="@+id/main_home_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tab_iv_home"
                    android:layout_width="@dimen/icon_height_tab"
                    android:layout_height="@dimen/icon_height_tab"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_tab_price" />

                <TextView
                    android:id="@+id/tab_tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_iv_home"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_price_name"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/label_text_size_tab" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_activity_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tab_iv_activity"
                    android:layout_width="@dimen/icon_height_tab"
                    android:layout_height="@dimen/icon_height_tab"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_tab_market" />

                <TextView
                    android:id="@+id/tab_tv_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_iv_activity"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_market_name"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/label_text_size_tab" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tab_rl_none"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_training_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tab_iv_training"
                    android:layout_width="@dimen/icon_height_tab"
                    android:layout_height="@dimen/icon_height_tab"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_tab_workshop" />

                <TextView
                    android:id="@+id/tab_tv_training"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_iv_training"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_workshop_name"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/label_text_size_tab" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/main_map_tab"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/tab_iv_map"
                    android:layout_width="@dimen/icon_height_tab"
                    android:layout_height="@dimen/icon_height_tab"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@drawable/icon_tab_map" />

                <TextView
                    android:id="@+id/tab_tv_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tab_iv_map"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/tab_map_name"
                    android:textColor="@color/tab_text_color"
                    android:textSize="@dimen/label_text_size_tab" />

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/main_menu_btn"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:src="@drawable/icon_tab_menu" />

        <!--<View
            android:id="@+id/main_menu_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/main_bottom_menu_bg_color"
            android:visibility="gone" />-->

        <RelativeLayout
            android:id="@+id/main_bottom_menu_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawer_container"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#fff"
        android:orientation="vertical">

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>